# gitshift

./: Cargo.toml  LICENSE.md  License.txt  README.md  Readme.md
.github/workflows/: ci-cd.yaml  release.yaml  test.yml
src/: cli.rs  main.rs  service.rs  sshkey.rs
