[package]
name = "gitshift"
version = "0.2.0"
edition = "2021"
license = "MIT"
authors = ["Rohan Sen <rohansen856@gmail.com>"]
description = "Git SSH for managing multiple GitHub accounts"
documentation = "https://github.com/rohansen856/gitshift"
repository = "https://github.com/rohansen856/gitshift"
homepage = "https://github.com/rohansen856/gitshift"

[dependencies]
ssh-key = { version = "0.6.0", features = ["rsa", "ed25519"] }
rand = "0.8.5"
colored = "3.0.0"
serde_json = "1.0.137"
anyhow = "1.0.95"
directories = "6.0.0"
clap = { version = "4.5.27", features = ["derive"] }
serde = { version = "1.0.217", features = ["derive"] }
